@@ -1,46 +1,55 @@
 package com.urise.webapp.model;
 
 import java.io.Serial;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
-public class ListSection extends AbstractSection {
+
+public class ListSection extends Section {
+
     @Serial
     private static final long serialVersionUID = 1L;
+
     public static final ListSection EMPTY = new ListSection("");
+
     private List<String> items;
 
     public ListSection() {
     }
 
-    public ListSection(String... item) {
-        this(List.of(item));
+    public ListSection(String... items) {
+        this(Arrays.asList(items));
     }
 
     public ListSection(List<String> items) {
-        Objects.requireNonNull(items, "list must not be null");
+        Objects.requireNonNull(items, "items must not be null");
         this.items = items;
     }
 
-    public List<String> getList() {
+    public List<String> getItems() {
         return items;
-    }
-
-    @Override
-    public boolean equals(Object o) {
-        if (this == o) return true;
-        if (o == null || getClass() != o.getClass()) return false;
-        ListSection that = (ListSection) o;
-        return items.equals(that.items);
-    }
-
-    @Override
-    public int hashCode() {
-        return Objects.hash(items);
     }
 
     @Override
     public String toString() {
         return items.toString();
     }
+
+    @Override
+    public boolean equals(Object o) {
+        if (this == o) return true;
+        if (o == null || getClass() != o.getClass()) return false;
+
+        ListSection that = (ListSection) o;
+
+        return items.equals(that.items);
+
+    }
+
+    @Override
+    public int hashCode() {
+        return items.hashCode();
+    }
 }
+
