@@ -1,19 +1,24 @@
 package com.urise.webapp.model;
 
+import javax.xml.bind.annotation.XmlAccessType;
+import javax.xml.bind.annotation.XmlAccessorType;
 import java.io.Serial;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Objects;
 
-public class OrganizationSection extends AbstractSection {
+
+@XmlAccessorType(XmlAccessType.FIELD)
+public class OrganizationSection extends Section {
     @Serial
     private static final long serialVersionUID = 1L;
+
     private List<Organization> organizations;
 
-    public OrganizationSection() {
-    }
+    public OrganizationSection() {}
 
     public OrganizationSection(Organization... organizations) {
-        this(List.of(organizations));
+        this(Arrays.asList(organizations));
     }
 
     public OrganizationSection(List<Organization> organizations) {
@@ -29,13 +34,16 @@ public class OrganizationSection extends AbstractSection {
     public boolean equals(Object o) {
         if (this == o) return true;
         if (o == null || getClass() != o.getClass()) return false;
+
         OrganizationSection that = (OrganizationSection) o;
+
         return organizations.equals(that.organizations);
+
     }
 
     @Override
     public int hashCode() {
-        return Objects.hash(organizations);
+        return organizations.hashCode();
     }
 
     @Override
